--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -89,8 +89,8 @@
 
         img{
             width: 70%;
-            height: 80%;
-            object-fit: cover;
+            height: 132%;
+            object-fit: contain;
             border-radius: 40px;
             align-items: center;
             justify-content: center;
