--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -10,6 +10,7 @@
         align-items: center;
         justify-content: space-between;
         height: 100%;
+        width: 88%;
 
         @include mobile{
             display: flex-end;
