--- a/src/components/parallax/parallax.scss
+++ b/src/components/parallax/parallax.scss
@@ -23,9 +23,10 @@
     background-size: cover;
     background-position: bottom;
     width: 100%;
-    height: 100%;
+    height: 116%;
     position: absolute;
     z-index: 3;
+    overflow: hidden;
 
     @include mobile {
       background-size: contain;
