--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -7,7 +7,7 @@
         position: sticky;
         top: 0;
         left: 0;
-        padding-top: 45px;
+        padding-top: 0px;
         text-align: center;
         color: yellow;
         font-size: 36px;
@@ -35,7 +35,7 @@
             height: 100%;
             margin: auto;
             display: flex;
-            gap: 50px;
+            gap: 4px;
             align-items: center;
             justify-content: center;
 
@@ -49,7 +49,8 @@
 
                 @include mobile{
                     width: 100%;
-                    min-height: 300px;
+                    min-height: 355px;
+                    padding-top: 78px;
                 }
                
                 img{
